feat: add contact preference validation for email notifications